UAT Space Program Shell Page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>UAT Space Program Data</title>
+</head>
+
+<body>
+    <h1>UAT Space Program</h1>
+    <script>
+    //Javascript Goes Here
+    </script>
+</body>
+
+</html>
