--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--UAT Space Program Shell Page
+Written by Megan Folsom
+megfolso@uat.edu
+May 11, 2021-->
 <html>
 
 <head>
@@ -6,10 +10,16 @@
 </head>
 
 <body>
+    <img src='UATspaceLogo-2.jpg' />
     <h1>UAT Space Program</h1>
     <script>
-    //Javascript Goes Here
+        //Javascript Stuff should happen here
+     document.write("document.write function test");
     </script>
+    <p>Paragraph Tag Placeholder Text</p><br>
+    <button style = 'color:green;'>Start</button>
+    <button style = 'color:red;'>Stop</button>
+    <script>alert("We have lift-off!");</script>
 </body>
 
 </html>
